fixed image overflows

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 
 .card-header{
     height: 200px;
+    overflow: hidden;
 }
 
 .card-header img {
@@ -44,7 +45,7 @@ body {
 }
 
 .card-header img:hover {
-  transform: scale(1.2);
+  transform: scale(2);
 }
 
 .card-content {
